Fixed various errors in migration model and re-enabled; various tidying.