@@ -31,7 +31,7 @@ public class BalancedMigrationModel {
     private final PersonFactory personFactory;
     private final PopulationStatistics desired;
 
-    public BalancedMigrationModel(Population population, RandomGenerator randomNumberGenerator, Geography geography, PersonFactory personFactory, PopulationStatistics desired) {
+    public BalancedMigrationModel(final Population population, final RandomGenerator randomNumberGenerator, final Geography geography, final PersonFactory personFactory, final PopulationStatistics desired) {
         this.population = population;
         this.randomNumberGenerator = randomNumberGenerator;
         this.geography = geography;
@@ -40,99 +40,97 @@ public class BalancedMigrationModel {
         foreignGeography = new ForeignGeography(randomNumberGenerator);
     }
 
-    public void performMigration(LocalDate currentTime, OBDModel model) {
+    public void performMigration(final LocalDate currentTime, final OBDModel model) {
 
-        int numberToMigrate = Math.toIntExact(Math.round(population.getLivingPeople().getNumberOfPeople()
-                * model.getDesiredPopulationStatistics()
-                .getMigrationRateDistribution(Year.of(currentTime.getYear()))
-                .getRate(0)));
+        final double migrationRate = model.getDesiredPopulationStatistics().getMigrationRateDistribution(Year.of(currentTime.getYear())).getRate(0);
+        final int numberOfPeople = population.getLivingPeople().getNumberOfPeople();
+        final int numberToMigrate = Math.toIntExact(Math.round(numberOfPeople * migrationRate));
 
-        Collection<List<IPerson>> peopleToMigrate = new ArrayList<>();
-        List<IPerson> livingPeople = new ArrayList<>(population.getLivingPeople().getPeople());
+        final Collection<List<IPerson>> peopleToMigrate = new ArrayList<>();
+        final List<IPerson> livingPeople = new ArrayList<>(population.getLivingPeople().getPeople());
 
-        HashSet<IPerson> theMigrated = new HashSet<>();
+        final HashSet<IPerson> theMigrated = new HashSet<>();
         // select people to move out of country
         while(theMigrated.size() < numberToMigrate) {
 
 
             IPerson selected;
             do {
-                int random = randomNumberGenerator.nextInt(livingPeople.size());
+                final int random = randomNumberGenerator.nextInt(livingPeople.size());
                 selected = livingPeople.get(random);
             } while(theMigrated.contains(selected));
 
             theMigrated.add(selected);
 
-            LocalDate moveDate = getMoveDate(currentTime, selected);
-            Address currentAbode = selected.getAddress(moveDate);
-            boolean withHousehold = migrateWithHousehold(currentTime, selected, currentAbode);
+            final LocalDate moveDate = getMoveDate(currentTime, selected);
+            final Address currentAbode = selected.getAddress(moveDate);
+            final boolean withHousehold = migrateWithHousehold(currentAbode);
 
-            List<IPerson> household = new ArrayList<>();
+            final List<IPerson> household = new ArrayList<>();
 
             if(withHousehold) {
                 Address emigrateTo = null;
 
                 while(!currentAbode.getInhabitants().isEmpty()) {
-                    IPerson person = currentAbode.getInhabitants().get(0);
+                    final IPerson person = currentAbode.getInhabitants().getFirst();
 
-                    IPerson lastChild = PopulationNavigation.getLastChild(person);
+                    final IPerson lastChild = PopulationNavigation.getLastChild(person);
 
                     LocalDate personalMoveDate = moveDate;
 
-                    if(lastChild != null && !household.contains(lastChild) && !currentAbode.getInhabitants().contains(lastChild) && lastChild.getDeathDate() == null) {
+                    if (lastChild != null && !household.contains(lastChild) && !currentAbode.getInhabitants().contains(lastChild) && lastChild.getDeathDate() == null) {
                         // if emigrating persons last child exists and is not emigrating in this group and is not dead
                         // we need to make sure that this last child was not conceived after the father left
                         personalMoveDate = checkConceptionBeforeMove(currentTime, moveDate, lastChild, personalMoveDate);
                     }
-                    emigrateTo = emigratePerson(personalMoveDate, currentAbode, household, person, emigrateTo, model);
+                    emigrateTo = emigratePerson(personalMoveDate, currentAbode, household, person, emigrateTo);
                 }
 
                 peopleToMigrate.add(household);
                 theMigrated.addAll(household);
 
             } else {
-                IPerson lastChild = PopulationNavigation.getLastChild(selected);
+                final IPerson lastChild = PopulationNavigation.getLastChild(selected);
 
                 LocalDate personalMoveDate = moveDate;
 
-                if(lastChild != null && lastChild.getDeathDate() == null) {
+                if (lastChild != null && lastChild.getDeathDate() == null) {
                     // if emigrating persons last child exists and is not dead
                     // we need to make sure that this last child was not conceived after the father left
                     personalMoveDate = checkConceptionBeforeMove(currentTime, moveDate, lastChild, personalMoveDate);
                 }
 
-                emigratePerson(personalMoveDate, currentAbode, household, selected, model);
+                emigratePerson(personalMoveDate, currentAbode, household, selected);
                 peopleToMigrate.add(household);
             }
-
         }
 
         // create immigrants by approximately mimicing the emigrants
-        for(List<IPerson> household : peopleToMigrate) {
+        for (final List<IPerson> household : peopleToMigrate) {
 
             if (household.size() == 1) {
-                IPerson toMimic = household.getFirst();
-                IPerson mimic = mimicPerson(toMimic, null, new HashMap<>());
+                final IPerson toMimic = household.getFirst();
+                final IPerson mimic = mimicPerson(toMimic, null, new HashMap<>());
 
                 immigratePerson(mimic, toMimic);
 
             } else {
 
-                Map<IPartnership, IPartnership> mimicLookup = new HashMap<>();
-                Map<IPerson, IPerson> mimicPersonLookup = new HashMap<>();
+                final Map<IPartnership, IPartnership> mimicLookup = new HashMap<>();
+                final Map<IPerson, IPerson> mimicPersonLookup = new HashMap<>();
 
                 household.sort((o1, o2) -> -o1.getBirthDate().compareTo(o2.getBirthDate()));
 
-                Address newHouse = geography.getRandomEmptyAddress();
-                Address oldCountry = foreignGeography.getCountry();
+                final Address newHouse = geography.getRandomEmptyAddress();
+                final Address oldCountry = foreignGeography.getCountry();
 
-                for (IPerson p : household) {
+                for (final IPerson p : household) {
 
                     IPerson mimic = mimicPersonLookup.get(p);
 
                     if (mimic == null) {
 
-                        IPartnership mimicParents = mimicLookup.get(p.getParents());
+                        final IPartnership mimicParents = mimicLookup.get(p.getParents());
 
                         if (mimicParents == null) {
                             mimic = mimicPerson(p, null, mimicPersonLookup);
@@ -154,15 +152,20 @@ public class BalancedMigrationModel {
                     } else {
 
                         if (mimic.getParents() == null) {
-                            IPartnership parents = mimicParents(p, mimicPersonLookup);
+                            final IPartnership parents = mimicParents(p, mimicPersonLookup, mimic.getSurname());
+
                             mimic.setParents(parents);
+
                             if (parents != null) {
+
+                                population.getLivingPeople().remove(parents.getFemalePartner());
                                 parents.addChildren(List.of(mimic));
+                                population.getLivingPeople().add(parents.getFemalePartner());
                             }
                         }
                     }
 
-                    LocalDate arrivalDate = p.getEmigrationDate().isBefore(mimic.getBirthDate()) ? mimic.getBirthDate() : p.getEmigrationDate();
+                    final LocalDate arrivalDate = p.getEmigrationDate().isBefore(mimic.getBirthDate()) ? mimic.getBirthDate() : p.getEmigrationDate();
 
                     mimic.setImmigrationDate(arrivalDate);
 
@@ -173,7 +176,7 @@ public class BalancedMigrationModel {
                     mimic.setAddress(arrivalDate, newHouse);
                 }
 
-                for (IPerson p : mimicPersonLookup.values()) {
+                for (final IPerson p : mimicPersonLookup.values()) {
 
                     if (!newHouse.getInhabitants().contains(p))
                         p.setPhantom(true);
@@ -182,115 +185,117 @@ public class BalancedMigrationModel {
         }
     }
 
-    private LocalDate checkConceptionBeforeMove(LocalDate currentTime, LocalDate moveDate, IPerson lastChild, LocalDate personalMoveDate) {
-        LocalDate conception = lastChild.getBirthDate().minus(desired.getMinGestationPeriod());
-        if (moveDate.isBefore(conception)) {
-            int windowInDays = (int) conception.until(currentTime.plus(1, ChronoUnit.YEARS), ChronoUnit.DAYS) - 1;
+    private LocalDate checkConceptionBeforeMove(final LocalDate currentTime, final LocalDate moveDate, final IPerson lastChild, LocalDate personalMoveDate) {
 
-            personalMoveDate = conception.plus(randomNumberGenerator.nextInt(windowInDays), ChronoUnit.DAYS);
+        final LocalDate conception = lastChild.getBirthDate().minus(desired.getMinGestationPeriod());
+        if (moveDate.isBefore(conception)) {
+            final int windowInDays = (int) conception.until(currentTime.plusYears(1L), ChronoUnit.DAYS) - 1;
+
+            personalMoveDate = conception.plusDays(randomNumberGenerator.nextInt(windowInDays));
         }
         return personalMoveDate;
     }
 
-    private void immigratePerson(IPerson person, IPerson toMimic) {
+    private void immigratePerson(final IPerson person, final IPerson toMimic) {
+
         population.getLivingPeople().add(person);
-        LocalDate arrivalDate = toMimic.getEmigrationDate().isBefore(person.getBirthDate()) ? person.getBirthDate() : toMimic.getEmigrationDate();
+        final LocalDate arrivalDate = toMimic.getEmigrationDate().isBefore(person.getBirthDate()) ? person.getBirthDate() : toMimic.getEmigrationDate();
         person.setImmigrationDate(arrivalDate);
 
-        if(arrivalDate.isAfter(person.getBirthDate())) {
+        if (arrivalDate.isAfter(person.getBirthDate())) {
             person.setAddress(person.getBirthDate(), foreignGeography.getCountry());
         }
 
         person.setAddress(arrivalDate, geography.getRandomEmptyAddress());
-
     }
 
-    private Address emigratePerson(LocalDate moveDate, Address currentAbode, List<IPerson> emigratingGroup, IPerson person, OBDModel model) {
-        return emigratePerson(moveDate, currentAbode, emigratingGroup, person, null, model);
+    private void emigratePerson(final LocalDate moveDate, final Address currentAbode, final List<IPerson> emigratingGroup, final IPerson person) {
+        emigratePerson(moveDate, currentAbode, emigratingGroup, person, null);
     }
 
-    private Address emigratePerson(LocalDate moveDate, Address currentAbode, List<IPerson> emigratingGroup, IPerson person, Address emigrateTo, OBDModel model) {
+    private Address emigratePerson(final LocalDate moveDate, final Address currentAbode, final List<IPerson> emigratingGroup, final IPerson person, final Address emigrateTo) {
 
         population.getLivingPeople().remove(person);
 
         population.getEmigrants().add(person);
         person.setEmigrationDate(moveDate.isBefore(person.getBirthDate()) ? person.getBirthDate() : moveDate);
 
-        if(currentAbode != null) currentAbode.removeInhabitant(person);
+        if (currentAbode != null) currentAbode.removeInhabitant(person);
         emigratingGroup.add(person);
 
         Address newCountry = emigrateTo;
-        if(newCountry == null) newCountry = foreignGeography.getCountry();
+        if (newCountry == null) newCountry = foreignGeography.getCountry();
 
         person.setAddress(moveDate, newCountry);
-//        model.handleSeperationMoves(person.getLastPartnership(), person);
 
         return newCountry;
     }
 
-    private LocalDate getMoveDate(LocalDate currentDate, IPerson person) {
-        LocalDate moveDate;
+    private LocalDate getMoveDate(final LocalDate currentDate, final IPerson person) {
+
+        final LocalDate moveDate;
         LocalDate lastMoveDate = person.getLastMoveDate();
 
-        if(lastMoveDate != null && lastMoveDate.isAfter(currentDate.plus(1, ChronoUnit.YEARS))) {
-            // last move is projected signifcantly into future - occurs when last partner dies and no future events are sin surviving partners timeline
-            // therefore we rollback the future move and emmigrate as below
+        if (lastMoveDate != null && lastMoveDate.isAfter(currentDate.plusYears(1))) {
+            // last move is projected significantly into future - occurs when last partner dies and no future events are in surviving partners timeline
+            // therefore we rollback the future move and emigrate as below
             person.cancelLastMove(geography);
             lastMoveDate = person.getLastMoveDate();
         }
 
-        if(lastMoveDate != null && lastMoveDate.isAfter(currentDate)) {
-            int excludedDays = (int) ChronoUnit.DAYS.between(currentDate, lastMoveDate);
+        if (lastMoveDate != null && lastMoveDate.isAfter(currentDate)) {
+            final int excludedDays = (int) ChronoUnit.DAYS.between(currentDate, lastMoveDate);
 
-            moveDate = lastMoveDate.plus(randomNumberGenerator.nextInt(366 - excludedDays), ChronoUnit.DAYS);
+            moveDate = lastMoveDate.plusDays(randomNumberGenerator.nextInt(366 - excludedDays));
         } else {
-            moveDate = currentDate.plus(randomNumberGenerator.nextInt(365), ChronoUnit.DAYS);
+            moveDate = currentDate.plusDays(randomNumberGenerator.nextInt(365));
         }
         return moveDate;
     }
 
-    private IPerson mimicPerson(IPerson person, IPartnership mimicedParents, Map<IPerson, IPerson> mimicPersonLookup) {
+    private IPerson mimicPerson(final IPerson person, final IPartnership mimicedParents, final Map<IPerson, IPerson> mimicPersonLookup) {
 
-        boolean adulterousBirth = person.isAdulterousBirth();
-        LocalDate birthDate = randomDateInYear(person.getBirthDate());
+        final boolean adulterousBirth = person.isAdulterousBirth();
+        final LocalDate birthDate = randomDateInYear(person.getBirthDate());
         IPartnership parents = mimicedParents;
 
-        if(parents == null) {
-            parents = mimicParents(person, mimicPersonLookup);
+        if (parents == null) {
+            parents = mimicParents(person, mimicPersonLookup, null);
         }
 
-        IPerson p = personFactory.makePerson(birthDate, parents, adulterousBirth, true, person.getSex());
+        final IPerson p = personFactory.makePerson(birthDate, parents, adulterousBirth, true, person.getSex());
         population.getLivingPeople().add(p);
 
-        if(parents != null)
+        if (parents != null) {
+            population.getLivingPeople().remove(parents.getFemalePartner());
             parents.addChildren(Collections.singleton(p));
+            population.getLivingPeople().add(parents.getFemalePartner());
+        }
 
         return p;
-
     }
 
-    private IPartnership mimicParents(IPerson person, Map<IPerson, IPerson> mimicPersonLookup) {
-        IPartnership parents = null;
-        IPartnership parentsToMimic = person.getParents();
+    private IPartnership mimicParents(final IPerson person, final Map<IPerson, IPerson> mimicPersonLookup, final String fatherSurname) {
 
-        if(parentsToMimic != null) {
-            IPerson fatherToMimic = parentsToMimic.getMalePartner();
-            IPerson motherToMimic = parentsToMimic.getFemalePartner();
+        IPartnership parents = null;
+        final IPartnership parentsToMimic = person.getParents();
+
+        if (parentsToMimic != null) {
+            final IPerson fatherToMimic = parentsToMimic.getMalePartner();
+            final IPerson motherToMimic = parentsToMimic.getFemalePartner();
 
             // Record newly created parents in population
 
             IPerson mimicedFather = mimicPersonLookup.get(fatherToMimic);
             if (mimicedFather == null) {
-                LocalDate birthDate = randomDateInYear(fatherToMimic.getBirthDate());
-                mimicedFather = personFactory.makePerson(birthDate, null, fatherToMimic.isAdulterousBirth(), true, SexOption.MALE);
-                population.getLivingPeople().add(mimicedFather);
+                final LocalDate birthDate = randomDateInYear(fatherToMimic.getBirthDate());
+                mimicedFather = personFactory.makePerson(birthDate, null, fatherToMimic.isAdulterousBirth(), true, SexOption.MALE, fatherSurname);
             }
 
             IPerson mimicedMother = mimicPersonLookup.get(motherToMimic);
             if (mimicedMother == null) {
-                LocalDate birthDate = randomDateInYear(motherToMimic.getBirthDate());
+                final LocalDate birthDate = randomDateInYear(motherToMimic.getBirthDate());
                 mimicedMother = personFactory.makePerson(birthDate, null, motherToMimic.isAdulterousBirth(), true, SexOption.FEMALE);
-                population.getLivingPeople().add(mimicedMother);
             }
 
             parents = new Partnership(mimicedFather, mimicedMother);
@@ -299,27 +304,24 @@ public class BalancedMigrationModel {
 
             mimicedFather.recordPartnership(parents);
             mimicedMother.recordPartnership(parents);
+
+            population.getLivingPeople().add(mimicedFather);
+            population.getLivingPeople().add(mimicedMother);
         }
 
         return parents;
     }
 
-    private LocalDate randomDateInYear(LocalDate birthDate) {
-        int year = birthDate.getYear();
-        int day = randomNumberGenerator.nextInt(365);
+    private LocalDate randomDateInYear(final LocalDate birthDate) {
 
-        return LocalDate.of(year, 1, 1).plus(day, ChronoUnit.DAYS);
+        final int year = birthDate.getYear();
+        final int day = randomNumberGenerator.nextInt(365);
+
+        return LocalDate.of(year, 1, 1).plusDays(day);
     }
 
-    private boolean migrateWithHousehold(LocalDate currentDate, IPerson person, Address address) {
+    private boolean migrateWithHousehold(final Address address) {
 
-        boolean withHousehold = false;
-
-        if(address != null && address.getInhabitants().size() > 1) {
-            withHousehold = randomNumberGenerator.nextBoolean();
-        }
-
-        return withHousehold;
+        return address != null && address.getInhabitants().size() > 1 && randomNumberGenerator.nextBoolean();
     }
-
 }
